<resources>
    <string name="app_name">Hangman</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_button">PLAY</string>
    <string name="standings_button">STANDINGS</string>
    <string name="quit_button">QUIT</string>
    <string name="drawable_photo_homepage">Hangman photo 7</string>
    <string name="score_view">Score:</string>
    <string name="score_number">№</string>
    <string name="drawable_photo_gameplay">Hangman photos</string>
    <string name="underscore_word">_ _ _ _ _ _ _</string>
    <string name="next_word_button">NEXT</string>
    <string name="home_icon">Home icon</string>
    <string name="user_name">NAME</string>
    <string name="user_score">SCORE</string>
    <string name="delete_button">DELETE</string>
    <string name="finalscore_text">Final score:</string>
    <string name="gameover_text">GAME OVER</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="save_button">SAVE</string>
    <string name="username_text">Username</string>
    <string name="letter_A">A</string>
    <string name="letter_B">B</string>
    <string name="letter_C">C</string>
    <string name="letter_D">D</string>
    <string name="letter_E">E</string>
    <string name="letter_F">F</string>
    <string name="letter_G">G</string>
    <string name="letter_H">H</string>
    <string name="letter_I">I</string>
    <string name="letter_J">J</string>
    <string name="letter_K">K</string>
    <string name="letter_L">L</string>
    <string name="letter_M">M</string>
    <string name="letter_N">N</string>
    <string name="letter_O">O</string>
    <string name="letter_P">P</string>
    <string name="letter_Q">Q</string>
    <string name="letter_R">R</string>
    <string name="letter_S">S</string>
    <string name="letter_T">T</string>
    <string name="letter_U">U</string>
    <string name="letter_V">V</string>
    <string name="letter_W">W</string>
    <string name="letter_X">X</string>
    <string name="letter_Y">Y</string>
    <string name="letter_Z">Z</string>
</resources>