<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gameplay">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/homeIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/home_icon"
            android:src="@drawable/ic_baseline_house_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RedundantDescriptionCheck" />


        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/score_view"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/homeIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="170dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toEndOf="@+id/score"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/hangmanImage"
            android:layout_width="251dp"
            android:layout_height="282dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/drawable_photo_gameplay"
            android:src="@drawable/hangmanphoto0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score" />

        <TextView
            android:id="@+id/underscoreWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:hint="@string/underscore_word"
            android:letterSpacing="0.25"
            android:textColorHint="#78909C"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hangmanImage" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/next_word_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/underscoreWord" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lettersLayout"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next_btn">

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                app:constraint_referenced_ids="a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z"
                app:flow_wrapMode="aligned" />

            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_A"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_B"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_C"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="94dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_D"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_E"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="174dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_F"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="212dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_G"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="248dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_H"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="285dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_I"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="328dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/j"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_J"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="360dp"
                tools:layout_editor_absoluteY="56dp" />

            <TextView
                android:id="@+id/k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_K"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_L"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_M"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_N"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_O"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="173dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_P"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="211dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_Q"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="248dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_R"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="286dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_S"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="324dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_T"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="360dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_U"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="200dp" />

            <TextView
                android:id="@+id/v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_V"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="200dp" />

            <TextView
                android:id="@+id/w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_W"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="200dp" />

            <TextView
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_X"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="200dp" />

            <TextView
                android:id="@+id/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_Y"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="174dp"
                tools:layout_editor_absoluteY="200dp" />

            <TextView
                android:id="@+id/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dim_gray"
                android:paddingHorizontal="10dp"
                android:text="@string/letter_Z"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="211dp"
                tools:layout_editor_absoluteY="200dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

